tests/snapshots/run_wpt_conformance__onnx_reduceLogSumExp_float32_3D_tensor_options_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_log_sum_exp.https.any.js",
    "reduceLogSumExp float32 3D tensor options.axes",
    "onnx",
    "PASS",
)
