tests/snapshots/run_wpt_conformance__onnx_reduceLogSumExp_float32_4D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_log_sum_exp.https.any.js",
    "reduceLogSumExp float32 4D tensor default options",
    "onnx",
    "PASS",
)
